[package]
version = "0.2.0-rc.1"
readme = "README.md"
name = "thejpster-test-docs-target"
license = "CC0-1.0"
edition = "2021"
description = "A test project that you should ignore"
authors = [ "Jonathan 'theJPster' Pallant" ]

[dependencies]

[package.metadata.docs.rs]
targets = [ "thumbv6m-none-eabi", "thumbv7em-none-eabihf" ]
